# bmad-project-delete-skus

./: .gitignore  README.md  deploy_to_git.sh  epics.md  implementation-status-assessment.md  package-lock.json  project-workflow-status-2025-10-14.md  tech-decisions-403-error-resolution.md  tech-decisions-fba-api-fix.md  tech-spec.md
src/sku-cleanup-tool/: .flake8  .gitignore  Makefile  __init__.py  deploy.sh  main.py  monitoring_example.py  pyproject.toml  run_cleanup_with_notifications.py  test_email.py  test_modes_demo.py
src/sku-cleanup-tool/config/: env.example  mypy.ini  pytest.ini  requirements.txt
src/sku-cleanup-tool/core/: amazon_api.py
src/sku-cleanup-tool/docs/: BUG_FIX_FBA_API_RESPONSE_PARSING.md  BUG_FIX_FBA_INVENTORY_PARSING.md  README.md  getInventorySummaries-api-documentation.md
src/sku-cleanup-tool/email_utils/: email_external.py  email_workspace.py  email_workspace_backup.py  gmail_oauth_sender.py  setup_gmail.py
src/sku-cleanup-tool/reports/: sku-cleanup-report-2025-10-14_11-15-05.md  sku-cleanup-report-2025-10-14_11-19-43.md  sku-cleanup-report-2025-10-14_11-23-22.md  sku-cleanup-report-2025-10-14_11-25-58.md  sku-cleanup-report-2025-10-14_11-26-25.md  sku-cleanup-report-2025-10-14_11-36-51.md  sku-cleanup-report-2025-10-14_11-37-36.md  sku-cleanup-report-2025-10-14_11-39-01.md  sku-cleanup-report-2025-10-14_11-39-40.md  sku-cleanup-report-2025-10-14_11-41-18.md  sku-cleanup-report-2025-10-14_13-30-31.md  sku-cleanup-report-2025-10-14_13-34-58.md  sku-cleanup-report-2025-10-14_13-35-50.md  sku-cleanup-report-2025-10-14_13-36-46.md  (+24 more)
(+93 files in other folders)
